--- a/LandingPageReact/src/App.css
+++ b/LandingPageReact/src/App.css
@@ -230,6 +230,9 @@ nav {
   color: #4c4c4c;
   cursor: pointer;
 }
+.footer-section-columns span:hover{
+  color: #fe9e0d;
+}
 .testimonial-section-bottom {
   margin-top: 2rem;
   background-color: white;
